WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
86303
[Texmap] TextureMapperAnimations does not support keyframe with multiple animations
https://bugs.webkit.org/show_bug.cgi?id=86303
Summary
[Texmap] TextureMapperAnimations does not support keyframe with multiple anim...
Igor Trindade Oliveira
Reported
2012-05-12 13:50:27 PDT
TextureMapperAnimations uses HashMap<String, TextureMapperAnimation> to store the keyframes animation info, however one keyframe can have more than one animation.
Attachments
Patch
(6.35 KB, patch)
2012-05-12 13:57 PDT
,
Igor Trindade Oliveira
noam
: review-
noam
: commit-queue-
Details
Formatted Diff
Diff
Patch
(6.92 KB, patch)
2012-05-12 20:54 PDT
,
Igor Trindade Oliveira
noam
: review+
noam
: commit-queue-
Details
Formatted Diff
Diff
Final patch
(6.92 KB, patch)
2012-05-13 09:19 PDT
,
Igor Trindade Oliveira
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Igor Trindade Oliveira
Comment 1
2012-05-12 13:57:14 PDT
Created
attachment 141584
[details]
Patch Proposed patch.
Noam Rosenthal
Comment 2
2012-05-12 18:08:50 PDT
Comment on
attachment 141584
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=141584&action=review
> Source/WebCore/ChangeLog:18 > + [Texmap] TextureMapperAnimations does not support keyframe with multiple animations > +
https://bugs.webkit.org/show_bug.cgi?id=86303
> + > + Reviewed by NOBODY (OOPS!). > + > + * platform/graphics/texmap/TextureMapperAnimation.cpp: > + (WebCore::TextureMapperAnimations::hasActiveAnimationsOfType): > + (WebCore::TextureMapperAnimations::hasRunningAnimations): > + (WebCore::TextureMapperAnimations::add): > + (WebCore): > + (WebCore::TextureMapperAnimations::pause): > + (WebCore::TextureMapperAnimations::apply): > + * platform/graphics/texmap/TextureMapperAnimation.h: > + (TextureMapperAnimations): Use HashMap<String, Vector<TextureMapperAnimation> >, > + so we can support an keyframe with multiple animations. > +
Insufficient changelog.
Igor Trindade Oliveira
Comment 3
2012-05-12 20:54:17 PDT
Created
attachment 141595
[details]
Patch Patch V2. Changelog improved.
Noam Rosenthal
Comment 4
2012-05-12 21:19:22 PDT
Comment on
attachment 141595
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=141595&action=review
LGTM, except for some renames
> Source/WebCore/platform/graphics/texmap/TextureMapperAnimation.cpp:185 > + const Vector<TextureMapperAnimation>& animation = it->second;
animation -> animations
> Source/WebCore/platform/graphics/texmap/TextureMapperAnimation.cpp:198 > + const Vector<TextureMapperAnimation>& animation = it->second;
ditto
Igor Trindade Oliveira
Comment 5
2012-05-13 09:19:16 PDT
Created
attachment 141607
[details]
Final patch
WebKit Review Bot
Comment 6
2012-05-13 10:00:08 PDT
Comment on
attachment 141607
[details]
Final patch Clearing flags on attachment: 141607 Committed
r116899
: <
http://trac.webkit.org/changeset/116899
>
WebKit Review Bot
Comment 7
2012-05-13 10:00:13 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug